<resources>
    <string name="app_name">Product Management</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="category_name">Category Name</string>
    <string name="category_information">Category Information</string>
    <string name="btn_save">Save</string>
    <string name="title_activity_maps">Maps Activity</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string name="select_image">Select Image</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="add_product">Add Product</string>
    <string name="modified_product">Modified Product</string>
    <string name="full_name">Họ và tên</string>
    <string name="grade">Grade</string>
    <string name="student_id">Student Id</string>
    <string name="email">Email</string>
    <string name="phone_number">SDT</string>
    <string name="dial">Dial</string>
    <string name="open_map">Open map</string>
    <string name="description">Description</string>
    <string name="category_id">Category ID</string>
    <string name="product_id">Product ID</string>
    <string name="miss_field">Please fill all fields</string>
    <string name="invalid_price">Invalid price</string>
    <string name="storage_permission">Storage permission denied</string>
    <string name="login_success">Login Successful!</string>
    <string name="login_fail">Invalid Username or Password</string>
    <string name="no_category">No category found, please add category first</string>
    <string name="title_delete_category">Delete Category</string>
    <string name="delete_category_message">Are you sure you want to delete this category?</string>
    <string name="cancel">Cancel</string>
    <string name="product_save_success">Product saved successfully</string>
    <string name="product_save_fail">Failed to save product</string>
    <string name="check_category">Please select a category to update</string>
    <string name="check_category_delete">Please select a product to delete</string>
    <string name="title_delete_product">Delete Product</string>
    <string name="delete_fail">Delete category fail.</string>
    <string name="delete_product_message">Are you sure you want to delete this product?</string>
    <string name="not_found">Category Name not found!</string>
    <string name="product_information">Product Information</string>
    <string name="list_product">List Product</string>
    <string name="about">About</string>
    <string name="list_category">List Category</string>
    <string name="call" >Call</string>
</resources>