<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center_vertical"
    android:orientation="horizontal"

    android:padding="16dp">

    <ImageView
        android:id="@+id/iv_product_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/default_product_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_product_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_id"
            android:textColor="@color/text"
            android:textColorHint="@color/text"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/product_name"
            android:textColor="@color/text"
            android:textColorHint="@color/text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_product_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/category_name"
            android:textColor="@color/text"
            android:textColorHint="@color/text"
            android:textSize="14sp" />

    </LinearLayout>
</LinearLayout>