<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".About">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <TextView
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_weight=".22"
            android:text="@string/full_name"
            android:textColor="@color/text"
            android:textColorHint="@color/text"
            android:textSize="10pt"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:text="Trần Đức Vượng"
            android:textColor="@color/text"
            android:textColorHint="@color/text"
            android:textSize="10pt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_weight=".22"
            android:text="@string/grade"
            android:textColor="@color/text"
            android:textColorHint="@color/text"
            android:textSize="10pt"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:text="D21_TH11"
            android:textColor="@color/text"
            android:textColorHint="@color/text"
            android:textSize="10pt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_weight=".22"
            android:text="@string/student_id"
            android:textColor="@color/text"
            android:textColorHint="@color/text"
            android:textSize="10pt"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:text="DH52112120"
            android:textColor="@color/text"
            android:textColorHint="@color/text"
            android:textSize="10pt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_weight=".22"
            android:text="@string/email"
            android:textColor="@color/text"
            android:textColorHint="@color/text"
            android:textSize="10pt"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:text="dh52112120@student.stu.edu.vn"
            android:textColor="@color/text"
            android:textColorHint="@color/text"
            android:textSize="8pt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_weight=".22"
            android:text="@string/phone_number"
            android:textColor="@color/text"
            android:textColorHint="@color/text"
            android:textSize="10pt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:text="0944149939"
            android:textColor="@color/text"
            android:textColorHint="@color/text"
            android:textSize="8pt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10pt"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_dial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10pt"
            android:layout_weight="1"
            android:backgroundTint="@color/button"
            android:text="@string/dial"
            android:textColor="@color/text"
            android:textColorHint="@color/text" />

        <Button
            android:id="@+id/btn_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10pt"
            android:layout_weight="1"
            android:backgroundTint="@color/button"
            android:text="@string/open_map"
            android:textColor="@color/text"
            android:textColorHint="@color/text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <com.google.android.gms.maps.MapView
            android:id="@+id/map_about"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</LinearLayout>